color-application/templates/kube/nextjs-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/l3montree-dev/kubernetes-developer-workshop/nextjs-frontend:latest
          ports:
            - containerPort: 3000
