color-application/templates/kube/nextjs-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /helm
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
    # host: frontend.local
